# pdf-reader

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  biome.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  tsconfig.json
.claude/: settings.local.json
configs/: config.yaml
src/: assembler.py  assembler.ts  config.ts  gemini-client.ts  gemini_client.py  logger.ts  markdown-drafter.ts  markdown_drafter.py  mermaid-validator.ts  models.py  models.ts  orchestrator.py  orchestrator.ts  page-store.ts  page_store.py  patch-applier.ts  patch_applier.py  rasterizer.py  rasterizer.ts  text-extractor.ts  text_extractor.py
tests/: models.test.ts  patch-applier.test.ts  test_models.py  test_patch_applier.py
